--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "vue-resource": "^1.3.4",
     "vue-router": "^2.6.0",
     "better-scroll": "^0.4.0",
-    "velocity-animate": "^1.5.0"
+    "velocity-animate": "^1.5.0",
+    "fastclick": "^1.0.6",
+    "axios": "^0.16.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
