--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "better-scroll": "^0.4.0",
     "velocity-animate": "^1.5.0",
     "fastclick": "^1.0.6",
-    "axios": "^0.16.2"
+    "axios": "^0.16.2",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
