--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "velocity-animate": "^1.5.0",
     "fastclick": "^1.0.6",
     "axios": "^0.16.2",
-    "vuex": "^2.3.1"
+    "vuex": "^2.3.1",
+    "highlight.js": "^9.12.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
